// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell renders a number value and title through props 1`] = `
<div
  class="license-cell p-3 text-nowrap flex-shrink-0 flex-grow-1"
>
  <span
    class="title d-flex align-items-center justify-content-start"
  >
    <span>
      title
    </span>
  </span>
   
  <div
    class="value mt-2 number"
  >
    <span>
      100
    </span>
  </div>
</div>
`;

exports[`Cell renders a string value and title through props 1`] = `
<div
  class="license-cell p-3 text-nowrap flex-shrink-0 flex-grow-1"
>
  <span
    class="title d-flex align-items-center justify-content-start"
  >
    <span>
      title
    </span>
  </span>
   
  <div
    class="value mt-2"
  >
    <span>
      value
    </span>
  </div>
</div>
`;

exports[`Cell renders an inflexible variant 1`] = `
<div
  class="license-cell p-3 text-nowrap flex-shrink-0"
>
  <span
    class="title d-flex align-items-center justify-content-start"
  >
    <span>
      title
    </span>
  </span>
   
  <div
    class="value mt-2"
  >
    <span>
      value
    </span>
  </div>
</div>
`;

exports[`Cell renders value and title slots that override props 1`] = `
<div
  class="license-cell p-3 text-nowrap flex-shrink-0 flex-grow-1"
>
  <span
    class="title d-flex align-items-center justify-content-start"
  >
    <h1>
      tanuki
    </h1>
  </span>
   
  <div
    class="value mt-2"
  >
    <marquee>
      party
    </marquee>
  </div>
</div>
`;
